    - Bugfix in VirtualMidiDevice: process note on with velocity 0 as note off.
    - Implemented missing handling of MIDI "running status".
    - CoreMIDI fix: a MIDIPacket can contain more than one event per packet.
    - MME bugfix: driver wasn't closed properly
    - CoreMIDI: automatically connect to all input sources by default (driver
      parameter "AUTO_BIND").

  * audio driver:
    - ASIO driver fixes for newer gcc versions (fix from PortAudio)
    - JACK audio: react on sample rate changes.
    - JACK audio: react on buffer size changes.
    - JACK audio: jack_port_get_buffer() was cached and called outside
      RT context.
    - ASIO driver: removed compiler warnings
    - CoreAudio: fixed minor error handling bug
    - ASIO driver: be more verbose when no ASIO card could be found (fixes #203)
    - JACK audio: return the JACK server's current sample rate as default value
      for audio device parameter "SAMPLERATE" (fixes #166).

  * LSCP server:
    - added support for sending MIDI CC messages via LSCP command
      "SEND CHANNEL MIDI_DATA CC <sampler-chan> <ctrl> <val>"
    - added LSCP command "GET AVAILABLE_EFFECTS"
    - added LSCP command "LIST AVAILABLE_EFFECTS"
    - added LSCP command "GET EFFECT INFO <effect-index>"
    - added LSCP command "CREATE EFFECT_INSTANCE <effect-index>"
    - added LSCP command
      "CREATE EFFECT_INSTANCE <effect-system> <module> <effect-name>"
    - added LSCP command "DESTROY EFFECT_INSTANCE <effect-instance>"
    - added LSCP command "GET EFFECT_INSTANCES"
    - added LSCP command "LIST EFFECT_INSTANCES"
    - added LSCP command "GET EFFECT_INSTANCE INFO <effect-instance>"
    - added LSCP command
      "GET EFFECT_INSTANCE_INPUT_CONTROL INFO <effect-instance> <input-control>"
    - added LSCP command "SET EFFECT_INSTANCE_INPUT_CONTROL VALUE
      <effect-instance> <input-control> <value>"
    - added LSCP command "GET SEND_EFFECT_CHAINS <audio-device>"